# barcode_scanner

./: README.md  barcode_generator  barcode_main  barcode_scanner  generate_barcode.cpp  generator_compile.sh  init_compile.sh  init_database  init_database.cpp  main.cpp  scanner.cpp  scanner_compile.sh
barcode_desktop_app/: CMakeLists.txt  GenerateWindow.cpp  GenerateWindow.h  GenerateWindow.ui  ScannerWindow.cpp  ScannerWindow.h  ScannerWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
compiles/: init_compile.sh  main_compile.sh
